--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.8",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-push-notification": "^8.1.1"
+    "react-native-picker-select": "^8.0.4",
+    "react-native-push-notification": "^8.1.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
