--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.6.1",
+    "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-picker/picker": "^2.4.8",
     "react": "18.2.0",
     "react-native": "0.71.4",
