--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@notifee/react-native": "^7.6.1",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "lucide-react-native": "^0.125.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
